--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React Redux App</title>
+    <link rel="icon" href="../src/assets/favicon.png" />
+    <title>Chen Share</title>
   </head>
   <body>
     <div id="root"></div>
